Improve output and formatting and always use `set -eu`
1. Always use `set -eu` in multi-line commands, to ensure that the
   step fails if any of the commands fail or an undefined variable is
   used.

2. Add a comment as the first line of each multi-line command, which
   will be shown as the title of the expandable log line in the GitHub
   workflow log.

3. For steps which produce a lot of output (which is not related to the
   actual checks we want to perform), we are now (more or less)
   consistently using the ::group:: command to produce an extendable log
   line below the unavoidable "Run ..." line:

       ▶ Run # Install govulncheck
       ▶ Install govulncheck

   The former expands to the multi-line command that is executed, the
   latter to the output of that command. It's not perfect, but better
   than the status quo, and I don't see a way to improve it further with
   the limitations imposed by GitHub.

4. Use single-line syntax (`run: <command>`) if there is only a single
   command.

--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -30,11 +30,14 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
+          # Install dependencies
+          set -eu
           sudo apt update
           sudo apt install ubuntu-dev-tools
 
       - name: Get and prepare package source
         run: |
+          # Get and prepare package source
           set -eu
 
           echo "::group::Get source"
@@ -103,11 +106,14 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
+          # Install dependencies
+          set -eu
           sudo apt update
           sudo apt install ubuntu-dev-tools
 
       - name: Get package source
         run: |
+          # Get package source
           set -eu
 
           pull-lp-source --download-only hello
@@ -197,6 +203,7 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          # Install dependencies
           set -eu
 
           apt update -y
@@ -210,6 +217,7 @@ jobs:
           NUMBER_OF_RANDOM_TAGS: 50
         shell: bash
         run: |
+          # Create test input
           set -eu
 
           test_tags=$(mktemp)
@@ -235,6 +243,7 @@ jobs:
       - name: Test lintian markdown parser
         shell: bash
         run: |
+          # Test lintian markdown parser
           set -eu
 
           cat "${{ env.TEST_TAGS }}" | \
