--- a/gh-actions/go/gotestfmt/action.yaml
+++ b/gh-actions/go/gotestfmt/action.yaml
@@ -13,6 +13,7 @@ runs:
       shell: bash
       run: |
         # Install gotestfmt
+        echo "::group::Install gotestfmt"
         set -eu
         TOOL=github.com/ubuntu/gotestfmt/v2/cmd/gotestfmt
         VERSION=$(go mod edit --json | jq -r ".Require[] | select(.Path==\"${TOOL}\") | .Version" || true)
@@ -22,11 +23,13 @@ runs:
         fi
 
         go install "${TOOL}@${VERSION}"
+        echo "::endgroup::"
 
     - name: Install gotestfmt wrapper script
       shell: bash
       run: |
         # Install gotestfmt wrapper script
+        echo "::group::Install gotestfmt wrapper script"
         set -eu
         # We install the wrapper to a different directory to avoid conflicts
         # with the gotestfmt binary. We also add the directory to the PATH.
@@ -36,3 +39,4 @@ runs:
         mkdir -p "${DEST}"
         install -m 755 "${GITHUB_ACTION_PATH}/gotestfmt" "${DEST}"
         echo "${DEST}" >> "${GITHUB_PATH}"
+        echo "::endgroup::"
