--- a/gh-actions/common/gh-perms/action.yaml
+++ b/gh-actions/common/gh-perms/action.yaml
@@ -34,6 +34,7 @@ runs:
         REPO_PATH: ${{ github.repository }}
         NEW_BRANCH: ${{ format('check_push-deleteme-{0}_{1}', github.run_id, github.sha) }}
       run: |
+        # Check push permissions
         set -eu
         git config user.name github-actions[bot]
         git config user.email github-actions[bot]@users.noreply.github.com
@@ -52,14 +53,12 @@ runs:
       if: ${{ steps.check_push.outputs.status == 'failed' }}
       env:
         NEW_BRANCH: ${{ steps.check_push.outputs.branch-to-cleanup }}
-      run: |
-        git push --delete "${NEW_BRANCH}"
+      run: git push --delete "${NEW_BRANCH}"
     - name: Clean up temporary checkout
       shell: bash
       if: always()
       continue-on-error: true
-      run: |
-        rm -rf '.source-checkout-${{ github.run_id }}'
+      run: rm -rf '.source-checkout-${{ github.run_id }}'
     - name: Comment on current pull request
       # Only applicable on pull requests.
       if: ${{ inputs.fail-for-pr != 'false' && github.event_name == 'pull_request' }}
@@ -69,6 +68,7 @@ runs:
       env:
         GH_TOKEN: ${{ inputs.token }}
       run: |
+        # Comment on current pull request
         set -eu
         if gh pr comment -b "You should restrict the github token permissions of the '${{ github.job }}' job (ideally to none - 'permissions: {}')" ${{ github.event.pull_request.number }}; then
           echo "::error::'token' has 'pull-requests:write' permission, but it should be 'none' or 'read'."
