Set "-eu" directly via the shell command
We can avoid starting each multi-line command with `set -eu` if we just
start the shell with those options.

In fact, the command that's run by the GitHub runner when using just
"bash" as the shell parameter did already use `-e`. The full command run
in that case is:

    bash --noprofile --norc -eo pipefail {0}

Source: https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#jobsjob_idstepsshell

We just need to add the `-u` option to that, so we get:

    bash --noprofile --norc -euo pipefail {0}

--- a/gh-actions/common/build-debian/action.yaml
+++ b/gh-actions/common/build-debian/action.yaml
@@ -84,16 +84,15 @@ runs:
   steps:
     - name: Check inputs
       if: ${{ inputs.sources-only != 'false' && inputs.from-sources-file != '' }}
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         echo "Invalid inputs, nothing to"
         exit 1
 
     - name: Set up source package build
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         echo "::group::Create local version with commit and docker container"
-        set -eu
 
         cd '${{ inputs.source-dir }}'
 
@@ -308,10 +307,9 @@ runs:
 
     - name: Set up package build
       if: ${{ inputs.sources-only != 'true' }}
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         echo "::group::Create build input directory"
-        set -eu
 
         # Appending /source because 'dpkg-source --extract' needs the output directory to be non-existent
         BUILD_INPUT_BASEDIR="$( mktemp --directory --tmpdir="${PWD}" )"
@@ -434,7 +432,6 @@ runs:
         shell: bash
         run: |
           echo "::group::Update lintian binary tester instance"
-          set -eu
 
           ""${{ env.ACTION_BIN_PATH }}"/${{ env.GITHUB_ACTION_PATH }}"/prepare-container.sh
           echo "::endgroup::"
