--- a/gh-actions/common/validate-pr-title/action.yaml
+++ b/gh-actions/common/validate-pr-title/action.yaml
@@ -17,10 +17,9 @@ runs:
         #   │        └─Component: inside parentheses, optional.
         #   └─Tag: limited to those pre-approved (see steps.validate.env.valid_tags).
         pr_title: ${{ github.event.pull_request.title }}
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Parse ${{ github.event.pull_request.title }}
-        set -eu
 
         echo "${pr_title}" | grep -P "${pattern}" > /dev/null || {
             echo "::error::Pull request title does not match regex ${pattern}"
@@ -43,10 +42,9 @@ runs:
       env:
         tag: ${{ steps.parse.outputs.tag }}
         valid_tags: build deps ci docs feat fix maint perf refactor tests
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Validate ${{ env.tag }}
-        set -eu
 
         # Convert to list so that we can check each word separatelly
         valid_tags=( ${{ env.valid_tags }} )
