--- a/gh-actions/common/run-autopkgtest/action.yaml
+++ b/gh-actions/common/run-autopkgtest/action.yaml
@@ -38,7 +38,7 @@ runs:
         TERM: dumb
         DEBIAN_FRONTEND: noninteractive
         DEBCONF_NONINTERACTIVE_SEEN: true
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Check prerequisites
         echo "::group::Check prerequisites"
@@ -83,10 +83,9 @@ runs:
         channel: latest/stable
 
     - name: Map the docker image name to LXD
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Set image for autopkgtest
-        set -eu
 
         case "${{ inputs.lxd-image }}" in
           ubuntu:latest)
@@ -119,11 +118,10 @@ runs:
         TERM: dumb
         DEBIAN_FRONTEND: noninteractive
         DEBCONF_NONINTERACTIVE_SEEN: true
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Install autopkgtest
         echo "::group::Install autopkgtest"
-        set -eu
 
         sudo apt update
         sudo apt install -y autopkgtest dnsmasq-base
@@ -133,11 +131,10 @@ runs:
     - name: Prepare autopkgtest LXD container
       env:
         TERM: dumb
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Prepare autopkgtest LXD container
         echo "::group::Prepare autopkgtest LXD container"
-        set -eu
 
         autopkgtest-build-lxd ${{ env.AUTOPKGTESTS_BASE_IMAGE }}
         echo "AUTOPKGTEST_IMAGE=$(lxc image list --format=csv -cl autopkgtest)" | \
@@ -148,10 +145,9 @@ runs:
     - name: Run autopkgtest
       env:
         TERM: dumb
-      shell: bash
+      shell: bash --noprofile --norc -euo pipefail {0}
       run: |
         # Run autopkgtest
-        set -eu
 
         args=(
           -s
