--- a/gh-actions/C/format-source/action.yaml
+++ b/gh-actions/C/format-source/action.yaml
@@ -7,13 +7,11 @@ inputs:
     required: true
     default: ''
 
-jobs:
-  build:
-    runs-on: ubuntu-24.04
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Verify formatting
-        run: |
-          SOURCE_PATHS="${{ inputs.sourcePaths }}"
-          ./format-source.sh check
+runs:
+  using: "composite"
+  steps:
+    - name: Verify formatting
+      shell: bash -eu
+      run: |
+        SOURCE_PATHS="${{ inputs.sourcePaths }}"
+        ./format-source.sh check
