Create a warning annotation if rate limit is hit
As requested by reviewer

--- a/gh-actions/go/generate/action.yaml
+++ b/gh-actions/go/generate/action.yaml
@@ -66,9 +66,24 @@ runs:
         fi
 
         # Get the version of the latest protoc release.
-        PROTOC_VERSION=$(curl -s "${AUTH_HEADER[@]}" \
-          https://api.github.com/repos/protocolbuffers/protobuf/releases/latest \
-          | jq -r '.tag_name' | sed 's/^v//')
+        PROTOC_HEADERS=$(mktemp)
+        PROTOC_JSON=$(curl -s -D "$PROTOC_HEADERS" "${AUTH_HEADER[@]}" \
+        https://api.github.com/repos/protocolbuffers/protobuf/releases/latest)
+
+        PROTOC_VERSION=$(echo "$PROTOC_JSON" | jq -r '.tag_name // empty' | sed 's/^v//')
+
+        if [ -z "$PROTOC_VERSION" ]; then
+          echo "Failed to get latest protobuf release from GitHub:"
+          echo "$PROTOC_JSON"
+
+          RATE_REMAINING=$(grep -i '^x-ratelimit-remaining:' "$PROTOC_HEADERS" | awk '{print $2}' | tr -d '\r')
+          echo "Rate limit remaining: $RATE_REMAINING"
+          if [ "$RATE_REMAINING" -eq 0 ] && [ -z "${{ inputs.token }}" ]; then
+            echo "::warning file=action.yaml,line=82::GitHub API rate limit may have been hit. Consider providing GITHUB_TOKEN via the token input."
+          fi
+
+          exit 1
+        fi
 
         # Download and install the latest protoc release.
         curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VERSION}/protoc-${PROTOC_VERSION}-linux-x86_64.zip
