--- a/gh-actions/C/format-source/action.yaml
+++ b/gh-actions/C/format-source/action.yaml
@@ -13,5 +13,4 @@ runs:
     - name: Verify formatting
       shell: bash -eu
       run: |
-        SOURCE_PATHS="${{ inputs.sourcePaths }}"
-        ./format-source.sh check
+        SOURCE_PATHS="${{ inputs.sourcePaths }}" ./format-source.sh check
