Rename dpkg-exclude-locales-and-manpages -> dpkg-install-speedup
As discussed on the PR, we want to use a more generic name, so that in
the future we can add more functionality which improves the installation
speed without having rename the action.

--- a/gh-actions/common/dpkg-install-speedup/action.yml
+++ b/gh-actions/common/dpkg-install-speedup/action.yml
@@ -1,4 +1,4 @@
-name: Exclude locales and manpages from dpkg
+name: Speed up dpkg package installation
 description: Configures dpkg to exclude locales and manpages from installed packages, speeding up package installation.
 
 runs:
