--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -28,6 +28,7 @@ jobs:
       ubuntu-image: ${{ env.UBUNTU_IMAGE }}
 
     steps:
+      - uses: canonical/desktop-engineering/gh-actions/common/dpkg-install-speedup@main
       - name: Install dependencies
         run: |
           # Install dependencies
@@ -104,6 +105,7 @@ jobs:
       run-id: ${{ github.run_id }}
 
     steps:
+      - uses: canonical/desktop-engineering/gh-actions/common/dpkg-install-speedup@main
       - name: Install dependencies
         run: |
           # Install dependencies
@@ -199,6 +201,7 @@ jobs:
       image: ubuntu:rolling
 
     steps:
+      - uses: canonical/desktop-engineering/gh-actions/common/dpkg-install-speedup@main
       - name: Install dependencies
         env:
           DEBIAN_FRONTEND: noninteractive
